Move code to correct file, change spacing in textbox

--- a/src/Components/styles/App.css
+++ b/src/Components/styles/App.css
@@ -8,6 +8,14 @@ div.content div.parallax{
   transition: var(--transition)
 }
 
+.content .parallax:first-child{
+  padding-top: 10px;
+}
+
+.content .parallax:last-child{
+  padding-bottom: 10px;
+}
+
 div.App{
   min-height:100vh;
   min-width: 100vw;
